cluster/apps/networking/coredns/app/lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-dns-lb
  namespace: kube-system
  annotations:
    io.cilium/lb-ipam-ips: 10.0.0.2
spec:
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 53
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
  selector:
    k8s-app: kube-dns
  type: LoadBalancer
